[gd_scene load_steps=4 format=2]

[ext_resource path="res://util/hitbox/Hitbox.gd" type="Script" id=1]
[ext_resource path="res://util/hitbox/DebugRect.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Hitbox" type="Area2D"]
collision_layer = 3
collision_mask = 3
gravity = 0.0
script = ExtResource( 1 )
type = "HIT"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DebugShape" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
color = Color( 1, 1, 1, 0.392157 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Hitbox_area_entered"]
[connection signal="color_changed" from="." to="DebugShape" method="onColorChanged"]
